fix: fix footer not aligned and edit navbar transition

--- a/components/navbar.css
+++ b/components/navbar.css
@@ -96,14 +96,14 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
-  height: 0;
+  width: 0;
+  height: 3px;
   background: linear-gradient(to right, var(--primary-color) 15%, var(--secondary-color) 85%);
   transition: all .3s;
 }
 
 #navbar .nav-button.active::after {
-  height: 3px;
+  width: 100%;
 }
 
 #navbar .footer {
@@ -279,7 +279,7 @@
   }
 
   #navbar .footer {
-    width: 100%;
+    width: calc(100% - 20px);
     position: fixed;
     bottom: 0;
     transform: translateY(100%);
